Fixed some sections to ensure legibility

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -19,13 +19,12 @@
     justify-content: center;
 }
 
-
-
 .aboutme-right {
     flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-color: #d3b489;
 }
 
 .aboutme-right h1 {
@@ -33,5 +32,5 @@
 }
 
 .aboutme-right h2 {
-    color: #f0ed3b;
+    color: #fff;
 }
